[package]
name = "tracing-surreal"
authors = ["29 <791603901@qq.com>"]
version = "0.0.1"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["serde", "async", "message", "logging", "diagnostics"]
categories = ["data-structures", "development-tools::debugging", "development-tools::profiling", "encoding", "web-programming::websocket"]
repository = "https://github.com/opensound-org/tracing-surreal"
homepage = "https://github.com/opensound-org/tracing-surreal"
description = """
🚧 A tracing Layer that can forward all tracing data to SurrealDB (WIP, nothing usable for now).
"""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Because we used `rustc-check-cfg` in build script
# 因为我们在构建脚本中使用了`rustc-check-cfg`
# https://blog.rust-lang.org/2024/05/06/check-cfg.html
rust-version = "1.80.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
est = "0.4.1"
surrealdb = { version = "2.1.0", features = ["kv-rocksdb"] }
tokio = { version = "1.4.11", features = ["full"] }

[dev-dependencies]

[build-dependencies]
version_check = "0.9.5"
