[package]
name = "tracing-surreal"
authors = ["29 <791603901@qq.com>"]
version = "0.0.1"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["serde", "async", "message", "logging", "diagnostics"]
categories = ["data-structures", "development-tools::debugging", "development-tools::profiling", "encoding", "web-programming::websocket"]
repository = "https://github.com/opensound-org/tracing-surreal"
homepage = "https://github.com/opensound-org/tracing-surreal"
description = """
🚧 A tracing Layer that can forward all tracing data to SurrealDB (WIP, nothing usable for now).
"""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Because we used `rustc-check-cfg` in build script
# 因为我们在构建脚本中使用了`rustc-check-cfg`
# https://blog.rust-lang.org/2024/05/06/check-cfg.html
rust-version = "1.80.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.39", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["display", "from_str"] }
either = { version = "1.13.0", features = ["serde"] }
est = "0.6.1"
futures = "0.3.31"
indexmap = { version = "2.7.0", features = ["serde"] }
mac_address = "1.1.7"
rmp-serde = "1.3.0"
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135", features = ["preserve_order"] }
serde_qs = "0.13.0"
serde_with = "3.12.0"
surrealdb = "2.1.4"
sysinfo = "0.33.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tokio-util = { version = "0.7.13", features = ["rt", "time"] }
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-subscriber = "0.3.19"
trait-variant = "0.1.2"
ulid = "1.1.4"
wgpu =  { version = "23.0.1", features = ["serde"] }

[dev-dependencies]

[build-dependencies]
version_check = "0.9.5"
